SA-438: replace Cisco DNA by Cisco SDA

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -54,7 +54,7 @@ If you need assistance please contact your Solution Architect.
 - Cisco
   - Viptela -- added vBond Orchestrator discovery support.
   - Firepower -- added support for Threat Defense NAT policies (NAT44).
-  - DNA Center -- added support for [Locator/ID Separation Protocol](../../IP_Fabric_GUI/technology_tables/lisp.md) (LISP).
+  - Cisco Software-Defined Access (SDA) -- added support for [Locator/ID Separation Protocol](../../IP_Fabric_GUI/technology_tables/lisp.md) (LISP).
 - Juniper
   - Junos -- added support for [configuration groups](https://www.juniper.net/documentation/us/en/software/junos/junos-overview/cli/topics/concept/junos-software-configuration-groups-understanding.html) for tasks Zone Firewall, NAT44 and ACL (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - Opengear
