NIM-11490 Add to known issues large BGP routing table problems

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -111,3 +111,8 @@ The following table shows how the items in the old menu map to those in the new 
   - Root cause: Custom policies could grant access only to `POST` HTTP method on table endpoints while export uses `GET` method
   - Workaround: Use admin access to export tables
   - Affected version: 6.3.0
+- Routing table parsing and validation may restart discovery workers and stop discovery
+  - Root cause: Parsing and validation of large BGP routing tables can stuck discovery workers for more than allowed 1 minute. Discovery workers may be disconnected from the discovery process and restarted. If too many restarts of discovery workers are performed, discovery process will stop.
+  - ID: `NIM-11490`
+  - Workaround: Limit download of BGP routing to minimum.
+  - Affected versions: 6.2.0 and later
