--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -1,19 +1,37 @@
 ---
 description: In this section, you can find the release notes for v6.3 releases.
-tags: ["draft"]
 ---
 
 # IP Fabric v6.3 (Camlet)
-
-!!! danger "Unreleased version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and is not available for download.
 
 --8<-- "snippets/clear_browser_cache.md"
 
 ### Upgrade Notices
 
 - During the update process locked snapshots will be unloaded together with other snapshots and their lock will be preserved. Therefore, such snapshots won't be deleted by snapshot retention.
+- Upgrade to `v6.3` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `vX.Y` in this file with `v6.3` and then run `systemctl restart ipf-dex`.
+
+  ```yaml
+  staticClients:
+    - id: ipfabric
+      redirectURIs:
+        - "https://demo1.eu.ipfabric.io/api/vX.Y/auth/external/azure"
+  ```
+
+  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
+
+## v6.3.0 (July 31st, 2023)
+
+```shell
+SHA256 (ipfabric-update-6-3-0+4.tar.gz.sig) = a51ea5af4de03ce2765c92876e78b7c214391180dee8ad1bf3dfc719af6d7f5e
+MD5 (ipfabric-update-6-3-0+4.tar.gz.sig) = 3c5b5ef71b91dd87d2005576ba80c9f2
+SHA256 (ipfabric-6-3-0+4.qcow2) = 29d9f659c34134d51cffe957add19e3b2d23e7905fd44a08af12278b3b802934
+MD5 (ipfabric-6-3-0+4.qcow2) = 2be181483c56c1d4fe0544cea01dd267
+SHA256 (ipfabric-6-3-0+4.ova) = 227e0851792dee75559f2e14f948bd7871b83ec7d47527bcc87fd842b729e5e0
+MD5 (ipfabric-6-3-0+4.ova) = ccac181a8c17a3f82cd14a0cdfa49b6f
+```
+
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.3.0](../release_notes_low-level/6.x/6.3.x/6.3.0.md).
 
 ### Backward incompatible changes
 
@@ -27,6 +45,12 @@ tags: ["draft"]
 - SSO `roleName` can only contain `a-zA-Z0-9_-`. Previously created roles will be automatically modified by removing not-allowed characters from role name according to the new validation rules. Make sure specified `roleName` refers to the existing role in the system.
 - Limiting the number of the Discovery services restarts -- from now on it is possible to change the default number of discovery service restarts. This may help you if your full discovery never completes. To change this setting, please contact our customer support team.
 - You can use the `Test Connection` button to check the Vendor API connectivity settings. The connection is not tested automatically with each change, but only when you click the button. This lets you save the Vendor API settings even if the controller is unreachable from IP Fabric.
+
+### New table layout
+
+In most sections with tables, we have switched to the new table layout (which also includes improved configuration of `Intent Verification Rules` and `Advanced Filters`).
+
+![Comparison of Old table and New table layouts](6.3_compare_old_and_new_tables.png)
 
 ### New tables for customers using RBAC
 
