--- a/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
@@ -98,7 +98,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10504` -- Medium -- Editing of intent rules is broken
 - `NIM-10508` -- Medium -- E2E Path Failure when first device has no route.
 - `NIM-10517` -- Medium -- Routing column IPSec tunnels:selectorRemoteAddress filter does not work
-- `NIM-10527` -- Highest -- SSO - ipf-dex.yaml requires changes on minor release
 - `NIM-10535` -- High -- Device Explorer table is not using full available height
 - `NIM-10536` -- Medium -- Device Explorer shows glitchy loader when loading multiple devices at once
 - `NIM-10542` -- Medium -- Check Point - show identity object in policies (without evaluation)
@@ -351,6 +350,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-9117` -- High -- Separate snapshot settings component
 - `NIM-9148` -- Medium -- API: Add state to IS-IS interfaces table
 - `NIM-9215` -- High -- NAT - Cisco Firepower
+- `NIM-9260` -- Highest -- Ineffective Rate Limiting on Local User Authentication
 - `NIM-9306` -- High -- Create tables for Cloud VM ACLs
 - `NIM-9454` -- High -- Refactor request
 - `NIM-9465` -- High -- Make OAS validation runnable in CI
