--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -20,6 +20,12 @@ description: In this section, you can find the release notes for v6.3 releases.
 
   For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
 
+## v6.3.1 (UNRELEASED)
+
+### Backward incompatible changes
+
+- All version related HTTP errors have aligned with [documentation](../../IP_Fabric_API/index.md#api-versioning). Improperly set version in request will result in an error response with `410 Gone` HTTP code and current product and API versions in its response body.
+
 ## v6.3.0 (July 31st, 2023)
 
 ```shell
