NIM-12011 CSV export does not work with intent filters

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -140,6 +140,11 @@ The following table shows how the items in the old menu map to those in the new 
   - Root cause: Custom policies could grant access only to `POST` HTTP method on table endpoints while export uses `GET` method
   - Workaround: Use admin access to export tables
   - Affected version: 6.3.0
+- CSV exports blank file when Intent Filter is applied (any filter with a `color`)
+  - Root cause: CSV export does not support exporting `reports` (intent) information with the data causing the filter returning no data.
+  - ID: `NIM-12011`
+  - Workaround: Use IP Fabric API to download the filter data and convert to CSV
+  - Affected versions: 6.3.0
 - Routing table parsing and validation may restart discovery workers and stop discovery
   - Root cause: Parsing and validation of large BGP routing tables can stuck discovery workers for more than allowed 1 minute. Discovery workers may be disconnected from the discovery process and restarted. If too many restarts of discovery workers are performed, discovery process will stop.
   - ID: `NIM-11490`
