NIM-11916 List openssl and memory problem as possible issues

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -144,3 +144,22 @@ The following table shows how the items in the old menu map to those in the new 
   - ID: `NIM-11490`
   - Workaround: Limit download of BGP routing to minimum.
   - Affected versions: 6.2.0 and later
+- Product stopped respecting system's OpenSSL CA store
+  - Root cause: product build doesn't include a respective flag `use-openssl-ca` for runtime
+  - ID: `NIM-12047`
+  - Workaround (shown on `nimpee-update`):
+    - log in to your machine as `osadmin` user via SSH
+    - execute `sudo su -` and put in your password to get root privileges
+    - put int `systemctl edit nimpee-update` which should open a unit file for `nimpee-update` in editor
+    - add following line under `[Service]` settings, un-comment (remove `#` character) if needed
+      ```
+      [Service]
+      Environment="NODE_OPTIONS=--use-openssl-ca"
+      ```
+    - restart nimpeeUpdate service using `systemctl restart nimpee-update`
+  - Affected versions: 6.3.0
+- Lowered maximum memory for discovery worker process (from 6GB to 4GB)
+  - Root cause: product build doesn't include a respective flag `max-old-space-size` for runtime
+  - ID: `NIM-12047`
+  - Workaround: no workaround
+  - Affected versions: 6.3.0
