Add NIM-12119 and NIM-10070 to known issues

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -163,3 +163,8 @@ The following table shows how the items in the old menu map to those in the new 
   - ID: `NIM-12047`
   - Workaround: no workaround
   - Affected versions: 6.3.0
+- Tasker does not follow restart stop limit
+  - ID `NIM-12058`
+  - Root cause: Tasker service does not follow limit of 3 restarts: If during the hybrid Vendor API discovery (APIC, FTD, Checkpoint, etc.) `tasker` process encounters an issue, it is restarted and discovery is started anew. This can lead to infinite discovery and filling the system disk with logs.
+  - Workaround: no workaround
+  - Affected versions: 6.2.0
