--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -20,11 +20,68 @@ description: In this section, you can find the release notes for v6.3 releases.
 
   For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
 
-## v6.3.1 (UNRELEASED)
+## v6.3.1 (August 16th, 2023)
 
-### Backward incompatible changes
+```shell
+SHA256 (ipfabric-update-6-3-1+1.tar.gz.sig) = cc1e79afd9b28f648f362bb002308433faa4a727349036169c4569cd8ed143f4
+MD5 (ipfabric-update-6-3-1+1.tar.gz.sig) = 6c48708a464841f0a65036e3f78dad24
+SHA256 (ipfabric-6-3-1+1.qcow2) = e124b39d192fafc8e0ed2c5daab6e6ef70beaf18d581f2585243810c7362b96c
+MD5 (ipfabric-6-3-1+1.qcow2) = 167cf96f9d06057a9117d412a5b4861e
+SHA256 (ipfabric-6-3-1+1.ova) = 32931352ce394d184c7f74d570b073dcabd529eff0bcbe30fb6a6f87b19afb5b
+MD5 (ipfabric-6-3-1+1.ova) = bacc07182c48474b943924283b01e334
+```
 
-- All version related HTTP errors have aligned with [documentation](../../IP_Fabric_API/index.md#api-versioning). Improperly set version in request will result in an error response with `410 Gone` HTTP code and current product and API versions in its response body.
+### Versioned API Error responses
+
+- All version related HTTP errors have aligned with [documentation](../../IP_Fabric_API/index.md#api-versioning). Improperly set version in request will result in an error response with `410 Gone` HTTP code and current product and API versions in its response body. Before it was returning `404 Not Found`.
+
+### Discovery
+
+- Number of devices processed by a single discovery worker is now configurable. Reach out to the support or solution architect team if adjustments are needed.
+
+### Fixed Known Issues
+
+- Editing OUI entries is broken in the UI (**Settings --> Discovery & Snapshots --> Global Configuration --> OUI**).
+  OUI can be viewed and all previous changes are kept, but cannot be added or changed at the moment.
+  - ID: `NIM-11931`
+  - Root cause: UI uses wrong API endpoint URLs after restructuring settings menu.
+  - Workaround: Use API `/settings/oui/*` directly.
+  - Affected version: 6.3.0
+- Custom policies with access to table endpoints don't allow to export table as CSV
+  - ID: `NIM-11916`
+  - Root cause: Custom policies could grant access only to `POST` HTTP method on table endpoints while export uses `GET` method
+  - Workaround: Use admin access to export tables
+  - Affected version: 6.3.0
+- CSV exports blank file when Intent Filter is applied (any filter with a `color`)
+  - Root cause: CSV export does not support exporting `reports` (intent) information with the data causing the filter returning no data.
+  - ID: `NIM-12011`
+  - Workaround: Use IP Fabric API to download the filter data and convert to CSV
+  - Affected versions: 6.3.0
+- Routing table parsing and validation may restart discovery workers and stop discovery
+  - Root cause: Parsing and validation of large BGP routing tables can stuck discovery workers for more than allowed 1 minute. Discovery workers may be disconnected from the discovery process and restarted. If too many restarts of discovery workers are performed, discovery process will stop.
+  - ID: `NIM-11490`
+  - Workaround: Limit download of BGP routing to minimum.
+  - Affected versions: 6.2.0 and later
+- Product stopped respecting system's OpenSSL CA store
+  - Root cause: product build doesn't include a respective flag `use-openssl-ca` for runtime
+  - ID: `NIM-12047`
+  - Workaround (shown on `nimpee-update`):
+    - log in to your machine as `osadmin` user via SSH
+    - execute `sudo su -` and put in your password to get root privileges
+    - put int `systemctl edit nimpee-update` which should open a unit file for `nimpee-update` in editor
+    - add following line under `[Service]` settings, un-comment (remove `#` character) if needed
+      ```
+      [Service]
+      Environment="NODE_OPTIONS=--use-openssl-ca"
+      ```
+    - restart nimpeeUpdate service using `systemctl restart nimpee-update`
+  - Affected versions: 6.3.0
+- Lowered maximum memory for discovery worker process (from 6GB to 4GB)
+  - Root cause: product build doesn't include a respective flag `max-old-space-size` for runtime
+  - ID: `NIM-12047`
+  - Workaround: no workaround
+  - Affected versions: 6.3.0
+
 
 ## v6.3.0 (July 31st, 2023)
 
@@ -128,47 +185,6 @@ The following table shows how the items in the old menu map to those in the new 
 | Configuration Wizard                          | (unchanged)                                                               |
 
 ### Known issues
-
-- Editing OUI entries is broken in the UI (**Settings --> Discovery & Snapshots --> Global Configuration --> OUI**).
-  OUI can be viewed and all previous changes are kept, but cannot be added or changed at the moment.
-  - ID: `NIM-11931`
-  - Root cause: UI uses wrong API endpoint URLs after restructuring settings menu.
-  - Workaround: Use API `/settings/oui/*` directly.
-  - Affected version: 6.3.0
-- Custom policies with access to table endpoints don't allow to export table as CSV
-  - ID: `NIM-11916`
-  - Root cause: Custom policies could grant access only to `POST` HTTP method on table endpoints while export uses `GET` method
-  - Workaround: Use admin access to export tables
-  - Affected version: 6.3.0
-- CSV exports blank file when Intent Filter is applied (any filter with a `color`)
-  - Root cause: CSV export does not support exporting `reports` (intent) information with the data causing the filter returning no data.
-  - ID: `NIM-12011`
-  - Workaround: Use IP Fabric API to download the filter data and convert to CSV
-  - Affected versions: 6.3.0
-- Routing table parsing and validation may restart discovery workers and stop discovery
-  - Root cause: Parsing and validation of large BGP routing tables can stuck discovery workers for more than allowed 1 minute. Discovery workers may be disconnected from the discovery process and restarted. If too many restarts of discovery workers are performed, discovery process will stop.
-  - ID: `NIM-11490`
-  - Workaround: Limit download of BGP routing to minimum.
-  - Affected versions: 6.2.0 and later
-- Product stopped respecting system's OpenSSL CA store
-  - Root cause: product build doesn't include a respective flag `use-openssl-ca` for runtime
-  - ID: `NIM-12047`
-  - Workaround (shown on `nimpee-update`):
-    - log in to your machine as `osadmin` user via SSH
-    - execute `sudo su -` and put in your password to get root privileges
-    - put int `systemctl edit nimpee-update` which should open a unit file for `nimpee-update` in editor
-    - add following line under `[Service]` settings, un-comment (remove `#` character) if needed
-      ```
-      [Service]
-      Environment="NODE_OPTIONS=--use-openssl-ca"
-      ```
-    - restart nimpeeUpdate service using `systemctl restart nimpee-update`
-  - Affected versions: 6.3.0
-- Lowered maximum memory for discovery worker process (from 6GB to 4GB)
-  - Root cause: product build doesn't include a respective flag `max-old-space-size` for runtime
-  - ID: `NIM-12047`
-  - Workaround: no workaround
-  - Affected versions: 6.3.0
 - Tasker does not follow restart stop limit
   - ID `NIM-12058`
   - Root cause: Tasker service does not follow limit of 3 restarts: If during the hybrid Vendor API discovery (APIC, FTD, Checkpoint, etc.) `tasker` process encounters an issue, it is restarted and discovery is started anew. This can lead to infinite discovery and filling the system disk with logs.
