Generate LLRN for 6.3.1 (and an update for 6.3.0)

--- a/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
@@ -4,7 +4,7 @@ description: IP Fabric automatically generated low-level release notes for versi
 
 # LLRN 6.3.0
 
-These are low-level release notes for IP Fabric release `6.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 580 issues.
+These are low-level release notes for IP Fabric release `6.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 581 issues.
 
 ## Epics
 
@@ -382,6 +382,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-10121` -- Medium -- Implement table changes
 - `NIM-10125` -- Medium -- OS Version table - Hyperlink on OS version pointing to device inventory with filter
 - `NIM-10149` -- High -- Add supported vendor logos to feature matrix
+- `NIM-10176` -- Low -- Add End of Life support information to our matrix
 - `NIM-10183` -- Medium -- Add redoc UI for OpenAPI
 - `NIM-10186` -- Medium -- OpenGear - enable OUI
 - `NIM-10191` -- High -- Update login/logout button texts
