--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -20,6 +20,10 @@ description: In this section, you can find the release notes for v6.3 releases.
 
   For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
 
+## v6.3.2 (UNRELEASED)
+
+- A fix for SSO has been implemented to ensure that updating the `redirectURIs` in the `/etc/ipf-dex.yaml` configuration file is only required after a major version upgrade (i.e. `6.3.0` --> `7.0.0`). For more information and example please see the [SSO Static Clients](../../IP_Fabric_Settings/administration/sso.md/#static-clients) documentation.
+
 ## v6.3.1 (August 16th, 2023)
 
 ```shell
