NIM-11146 Mention Vendors API bulk actions

--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -13,6 +13,14 @@ tags: ["draft"]
 
 ## v6.4.0 (UNRELEASED)
 
+### GUI
+
+- Added support for bulk actions on Vendor APIs (in both the global and
+  snapshot-specific settings). This is useful for enabling, disabling or
+  deleting all (or multiple) Vendor APIs at once.
+
+  ![Vendor API GUI with bulk actions](6.4_vendor_api_bulk_actions.png)
+
 ### Network Discovery
 
 - Palo Alto
