--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -142,7 +142,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 
 - This upgrade requires IP Fabric to be on `4.4.3` prior to upgrade to `5.0.0`. IP Fabric `4.4.2` or lower will not work -- please upgrade to `4.4.3` using the normal method before carrying out the `5.0.0` upgrade process.
 - Due to the major changes stated above, automatic updates will be disabled for this release and will require manual upgrade.
-- Prior to update please ensure you perform a [backup of your system](../../System_Administration/Administrative_Interface/backup_and_restore.md) or it is highly recommend to create a VM snapshot
+- Prior to update please ensure you perform a [backup of your system](../../System_Administration/System_Administration_UI/restore_or_backup.md) or it is highly recommended to create a VM snapshot.
 - It is recommended (for all updates) to unload all snapshots prior to performing the upgrade.
 - Requires 10GB of free disk space.
 - Estimated upgrade time is around 20 minutes however depending on the resources of your VM it could take longer than an hour.
