NAE/NIM-12280 APIC service graphs 1st phase

--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -25,3 +25,7 @@ tags: ["draft"]
 
 - Palo Alto
   - PAN-OS -- added support for SNMP (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+- Cisco
+  - ACI -- added basic support for Service Graphs
+    - Service graphs inventory added to [SDN](../../IP_Fabric_GUI/technology_tables/SDN.md)
+    - Supported rules can be found in a [Routing policies](../../IP_Fabric_GUI/technology_tables/routing.md/#routing-policies)
