NIM-10166 Update AWS IAM policy for 6.4; add AWS changes to 6.4 RN

--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -29,3 +29,7 @@ tags: ["draft"]
   - ACI -- added basic support for Service Graphs
     - Service graphs inventory added to [SDN](../../IP_Fabric_GUI/technology_tables/SDN.md)
     - Supported rules can be found in a [Routing policies](../../IP_Fabric_GUI/technology_tables/routing.md/#routing-policies)
+- AWS
+  - **Update the related IAM policy prior to upgrading to `6.4`.** Download the policy JSON file [IAM-policy-IPF_6.4.json](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/aws/IAM-policy-IPF_6.4.json). 
+  - Transit Gateway routing significant update - added support for connect, peering and direct-connect-gateway attachments. Improved support for VPC and VPN attachments.
+  - initial Direct Connect support - Direct Connect Gateway with transit virtual interfaces only. E2E path-lookup over Direct Connect isn't fully supported yet.
