NIM-10844 Document ACI endpoints being used as new information source for identifying neighbours during discovery

--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -33,3 +33,11 @@ tags: ["draft"]
   - **Update the related IAM policy prior to upgrading to `6.4`.** Download the policy JSON file [IAM-policy-IPF_6.4.json](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/aws/IAM-policy-IPF_6.4.json). 
   - Transit Gateway routing significant update - added support for connect, peering and direct-connect-gateway attachments. Improved support for VPC and VPN attachments.
   - initial Direct Connect support - Direct Connect Gateway with transit virtual interfaces only. E2E path-lookup over Direct Connect isn't fully supported yet.
+- New source of information for identifying neighbours
+ - We now support ACI endpoint tables as a possible source of information for
+   identifying neighbours during the discovery process. You may add/remove the
+   `ACI endpoints` entry in the `What information is used to identify
+   neighbours` field in **Settings --> Discovery & Snapshots --> Discovery
+   Settings --> Discovery tasks settings**. We only consider devices as
+   neighbours if their OUIs are enabled for discovery in **Settings -->
+   Discovery & Snapshots --> Global Configuration --> OUI**.
