NIM-10983 Document marking snapshot as 'FAILED' when discovery service is restarted

--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -23,6 +23,11 @@ tags: ["draft"]
 
 ### Network Discovery
 
+When the discovery process is automatically stopped due to a discovery service
+being restarted multiple times, the resulting snapshot will be marked as
+`FAILED` (and it will contain a `The discovery process failed. Data in this
+snapshot is incomplete.` note).
+
 - Palo Alto
   - PAN-OS -- added support for SNMP (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - Cisco
