Fix 6.3 and 6.4 release notes, add new bug fixes, hashes and unify banners

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -4,6 +4,8 @@ description: In this section, you can find the release notes for v6.3 releases.
 
 # IP Fabric v6.3 (Camlet)
 
+--8<-- "snippets/upgrade_version_policy.md"
+
 --8<-- "snippets/clear_browser_cache.md"
 
 ### Upgrade Notices
@@ -20,9 +22,22 @@ description: In this section, you can find the release notes for v6.3 releases.
 
   For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
 
-## v6.3.2 (UNRELEASED)
+## v6.3.2 (September 4th, 2023)
 
-- A fix for SSO has been implemented to ensure that updating the `redirectURIs` in the `/etc/ipf-dex.yaml` configuration file is only required after a major version upgrade (i.e. `6.3.0` --> `7.0.0`). For more information and example please see the [SSO Static Clients](../../IP_Fabric_Settings/administration/sso.md/#static-clients) documentation.
+!!! important "Not a GA"
+
+    This release is available only to early adopters for testing purposes.
+
+```shell
+SHA256 (ipfabric-update-6-3-2+1.tar.gz.sig) = dae0f2be799ebfbccb53f6f65158ba66f3a419b3401ff21c7a6e5ead4725de19
+MD5 (ipfabric-update-6-3-2+1.tar.gz.sig) = 7d82a812efa6b29d973bd6f4a903d31e
+SHA256 (ipfabric-6-3-2+1.qcow2) = 3d9fc23a8a9c067ed08a155d38e81845544db3eb894ef122c41b559bff96a24a
+MD5 (ipfabric-6-3-2+1.qcow2) = c7b75bca231d180df541dde57c39f01b
+SHA256 (ipfabric-6-3-2+1.ova) = 68cf6f3af1ae6ba37247947ce1fbdce8716198fe399903b66c92816e2cb24680
+MD5 (ipfabric-6-3-2+1.ova) = 85a8723cfa734aa58c6d0a9f23349809
+```
+
+- A fix for SSO has been implemented to ensure that updating the `redirectURIs` in the `/etc/ipf-dex.yaml` configuration file is only required after a major version upgrade (i.e. `6.3.0` --> `7.0.0`). For more information and example please see the [SSO Static Clients](../../../IP_Fabric_Settings/administration/sso.md/#static-clients) documentation.
 
 ## v6.3.1 (August 16th, 2023)
 
