--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -10,9 +10,45 @@ tags: ["draft"]
     This is an upcoming IP Fabric version, which has not been released yet and
     is not available for download.
 
+--8<-- "snippets/upgrade_version_policy.md"
+
 --8<-- "snippets/clear_browser_cache.md"
 
-## v6.4.0 (UNRELEASED)
+### Upgrade Notices
+
+- During the update process, locked snapshots will be unloaded together with other snapshots and their lock will be preserved. Therefore, such snapshots won't be deleted by snapshot retention.
+- Upgrade to `v6.4` may break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Since `6.3.2` release, we are omitting minor API version for SSO configuration and only major version will need to be changed with the next major IP Fabric version. Simply replace the `vX.Y` in this file with `v6` and then run `systemctl restart ipf-dex`.
+
+  ```yaml
+  staticClients:
+    - id: ipfabric
+      redirectURIs:
+        - "https://demo1.eu.ipfabric.io/api/vX/auth/external/azure"
+  ```
+
+  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
+
+## v6.4.1 (UNRELEASED)
+
+### Bug Fixes
+
+- Discovery process may got stuck when processing last devices in the queue. Also Remaining devices
+  for the discovery are now being correctly removed from the queue.  
+
+## v6.4.0 (September 15th, 2023)
+
+!!! important "Not a GA"
+
+    This release is available only to early adopters for testing purposes.
+
+```shell
+SHA256 (ipfabric-update-6-4-0+2.tar.gz.sig) = e649a26382020ec3256ea7a554d49256a89276f3f048adfbdc06a31fe20c747f
+MD5 (ipfabric-update-6-4-0+2.tar.gz.sig) = d634c3b286fdf3c268c50b0d90be80a9
+SHA256 (ipfabric-6-4-0+2.qcow2) = 50a1c62a5a2899f8ae363f7fd910d3b28cf4e5dd4e15c45dfcaa5a7ad2c72cf4
+MD5 (ipfabric-6-4-0+2.qcow2) = 4088907421e099f5dee774d4fcdbd5fc
+SHA256 (ipfabric-6-4-0+2.ova) = 95a3e8224dbef7749cace5ead1f1eca6a1c199d8f4e25bef2df9bd3a21362b95
+MD5 (ipfabric-6-4-0+2.ova) = dc05c9c7c76013cfa8e308e9e380915b
+```
 
 ### GUI
 
@@ -29,6 +65,7 @@ tags: ["draft"]
     service being restarted multiple times, the resulting snapshot will be
     marked as `FAILED` (and it will contain a `The discovery process failed.
     Data in this snapshot is incomplete.` note).
+  - Discovery services `tasker` and `worker` can now use 10GB of RAM instead of 6GB.
 - Palo Alto
   - PAN-OS -- added support for SNMP (see our
     [feature matrix](https://matrix.ipfabric.io) for more details)
