Fix incorrect back link to anchor

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -37,7 +37,7 @@ SHA256 (ipfabric-6-3-2+1.ova) = 68cf6f3af1ae6ba37247947ce1fbdce8716198fe399903b6
 MD5 (ipfabric-6-3-2+1.ova) = 85a8723cfa734aa58c6d0a9f23349809
 ```
 
-- A fix for SSO has been implemented to ensure that updating the `redirectURIs` in the `/etc/ipf-dex.yaml` configuration file is only required after a major version upgrade (i.e. `6.3.0` --> `7.0.0`). For more information and example please see the [SSO Static Clients](../../IP_Fabric_Settings/administration/sso.md/#static-clients) documentation.
+- A fix for SSO has been implemented to ensure that updating the `redirectURIs` in the `/etc/ipf-dex.yaml` configuration file is only required after a major version upgrade (i.e. `6.3.0` --> `7.0.0`). For more information and example please see the [SSO Static Clients](../../IP_Fabric_Settings/administration/sso.md#static-clients) documentation.
 
 ## v6.3.1 (August 16th, 2023)
 
