NIM-12428 Document feature flag to disable local IP check for specified subnets

--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -28,6 +28,21 @@ tags: ["draft"]
 
   For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
 
+## v6.4.2 (UNRELEASED)
+
+### Experimental Features
+
+Newly added features which need to be explicitly enabled in service files. If
+you are interested in trying them out, please contact our Support or Solution
+Architect team and we will gladly help you with enabling these features.
+
+`SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`
+
+:   By default, IP Fabric excludes CLI jobs from the discovery process based
+    on already discovered devices and their local interface IP addresses. If
+    you have duplicate IP addresses in the network, then it can be worthy to
+    whitelist some subnets.
+
 ## v6.4.1 (UNRELEASED)
 
 ### Bug Fixes
