NIM-12478 Add info about Check Point identity-based policies

--- a/docs/releases/release_notes/6.5.md
+++ b/docs/releases/release_notes/6.5.md
@@ -14,6 +14,8 @@ tags: ["draft"]
 
 ### Network Discovery
 
+- Check Point Gaia
+  - Initial support for Identity Awareness (access-role objects) in security policies was added. See our [documentation](../../support/known_issues/Vendors/checkpoint.md) about how to set up management servers.
 - Cisco
   - Viptela -- to prevent long discovery time, limit for OMP route API endpoints
     was added. Default value is 100. (see our
