--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -1,14 +1,8 @@
 ---
 description: In this section, you can find the release notes for v6.4 releases.
-tags: ["draft"]
 ---
 
 # IP Fabric v6.4
-
-!!! danger "Unreleased version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
 
 --8<-- "snippets/upgrade_version_policy.md"
 
@@ -28,7 +22,18 @@ tags: ["draft"]
 
   For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
 
-## v6.4.2 (UNRELEASED)
+## v6.4.3 (GA, October 16th, 2023)
+
+```
+SHA256 (ipfabric-update-6-4-3+2.tar.gz.sig) = 4480ddcf82cd59c0be28b8bb026fc1f8f4a6be149ba4fde66f16b49eabb07771
+MD5 (ipfabric-update-6-4-3+2.tar.gz.sig) = 315d40eb4feac978d7ce8365b4f8dc14
+SHA256 (ipfabric-6-4-3+2.qcow2) = e6851eb5575e92d3af4be71fe36e7e902ca9332f91d61370a7f46759a10a4254
+MD5 (ipfabric-6-4-3+2.qcow2) = 832bd482d11c7efb23f17f5ad135e2f7
+SHA256 (ipfabric-6-4-3+2.ova) = b81d3829de02ee7e79f91a83b16e94b9bd93a619141552d51e7ab098798ae191
+MD5 (ipfabric-6-4-3+2.ova) = a8e6c92f419933e5a248632b51269902
+```
+
+## v6.4.2
 
 ### Experimental Features
 
@@ -38,17 +43,17 @@ Architect team and we will gladly help you with enabling these features.
 
 `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`
 
-:   By default, IP Fabric excludes CLI jobs from the discovery process based
-    on already discovered devices and their local interface IP addresses. If
-    you have duplicate IP addresses in the network, then it can be worthy to
-    whitelist some subnets.
+: By default, IP Fabric excludes CLI jobs from the discovery process based
+on already discovered devices and their local interface IP addresses. If
+you have duplicate IP addresses in the network, then it can be worthy to
+whitelist some subnets.
 
-## v6.4.1 (UNRELEASED)
+## v6.4.1
 
 ### Bug Fixes
 
 - Discovery process may got stuck when processing last devices in the queue. Also Remaining devices
-  for the discovery are now being correctly removed from the queue.  
+  for the discovery are now being correctly removed from the queue.
 
 ## v6.4.0 (September 15th, 2023)
 
@@ -78,8 +83,7 @@ MD5 (ipfabric-6-4-0+2.ova) = dc05c9c7c76013cfa8e308e9e380915b
 - IP Fabric
   - When the discovery process is automatically stopped due to a discovery
     service being restarted multiple times, the resulting snapshot will be
-    marked as `FAILED` (and it will contain a `The discovery process failed.
-    Data in this snapshot is incomplete.` note).
+    marked as `FAILED` (and it will contain a `The discovery process failed. Data in this snapshot is incomplete.` note).
   - Discovery services `tasker` and `worker` can now use 10GB of RAM instead of 6GB.
 - Palo Alto
   - PAN-OS -- added support for SNMP (see our
@@ -96,12 +100,11 @@ MD5 (ipfabric-6-4-0+2.ova) = dc05c9c7c76013cfa8e308e9e380915b
 - New source of information for identifying neighbours
   - We now support **ACI endpoint tables** as a possible source of information
     for identifying neighbours during the discovery process. You may add/remove
-    the `ACI endpoints` entry in the `What information is used to identify
-    neighbours` field in **Settings --> Discovery & Snapshots --> Discovery
-    Settings --> Discovery tasks settings**.
-    - We only consider devices as neighbours if their OUIs are enabled for
-      discovery in **Settings --> Discovery & Snapshots --> Global Configuration
-      --> OUI**.
+    the `ACI endpoints` entry in the `What information is used to identify neighbours` field in
+    **Settings --> Discovery & Snapshots --> Discovery Settings --> Discovery tasks settings**.
+  - We only consider devices as neighbours if their OUIs are enabled for
+    discovery in **Settings --> Discovery & Snapshots --> Global Configuration
+    --> OUI**.
 
 ### Experimental Features
 
