--- a/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
@@ -4,7 +4,7 @@ description: IP Fabric automatically generated low-level release notes for versi
 
 # LLRN 6.3.0
 
-These are low-level release notes for IP Fabric release `6.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 581 issues.
+These are low-level release notes for IP Fabric release `6.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 582 issues.
 
 ## Epics
 
@@ -182,6 +182,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-11012` -- Medium -- Bugfix: commands/cisco/_meraki/v1/networks/devices/wireless/status (6.2.0-2)
 - `NIM-11020` -- Medium -- Add blackhole nextHop for routing table (HP Comware)
 - `NIM-11024` -- High -- Inconsistent Frontend Column Names
+- `NIM-11037` -- High -- After changing username in Okta, user could not log into IP Fabric via Okta SSO
 - `NIM-11041` -- Medium -- Fix failing test in main branch
 - `NIM-11047` -- Medium -- Checkpoint incorrect parsing of source in a rule
 - `NIM-11049` -- High -- Discovery - unstable rabbit (rabbitmq) connection
